# aws-ai-platform-engineering

./: .gitignore  README.md  pyproject.toml
config/: aws_config.yaml
src/agents/: bedrock_agent.py
src/document_intelligence/: textract_client.py
src/evaluation/: bedrock_evaluation.py
src/guardrails/: bedrock_guardrails.py
src/models/: bedrock_client.py
src/pipelines/: sagemaker_pipeline.py
src/rag/: knowledge_base.py
src/utils/: config.py  logging.py
tests/unit/: test_bedrock_client.py  test_knowledge_base.py
